fix(tables): grid alignment

--- a/packages/react-ui/src/app/routes/tables/id/react-data-grid.css
+++ b/packages/react-ui/src/app/routes/tables/id/react-data-grid.css
@@ -1,5 +1,6 @@
 .rdg-cell {
     --rdg-selection-color: none !important;
+    padding-inline: 0px !important;
 }
 
 .rdg-summary-row {
